# realsense

./: README.md
detect_obstacle/: CMakeLists.txt  package.xml
detect_obstacle/include/detect_obstacle/: pointcloud_to_laserscan_nodelet.h
detect_obstacle/launch/: pointcloud_to_laserscan.launch
detect_obstacle/rviz/: rviz.rviz
detect_obstacle/src/: analyticPointCloud.cpp  pointcloud_to_laserscan.cpp  pointcloud_to_laserscan_nodelet.cpp
